--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:textSize="20sp"
-        android:text="@string/send_email"
+        android:text="@string/menu_change_password"
         android:textColor="@color/white"
         android:background="@color/colorPrimaryDark"/>
 
@@ -28,16 +28,16 @@
         android:paddingEnd="10dp">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilEmail"
+            android:id="@+id/tilPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.AppCompatEditText
-                android:id="@+id/txtEmail"
+                android:id="@+id/txtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"/>
+                android:hint="@string/password"
+                android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
-            android:text="@string/send"
+            android:text="@string/change"
             android:gravity="center"
             android:textSize="17sp"
             style="?android:attr/buttonStyleSmall"/>
