--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -38,6 +38,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
                     android:text="ricardobravo@outlook.com"
                     android:singleLine="true"
                     android:hint="@string/email"/>
