feat(products): add list of products

--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linGeneral"
     android:layout_width="match_parent"
+    android:background="@drawable/side_nav_bar"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -46,11 +47,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp">
 
         <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
             android:scaleType="centerInside"
@@ -63,8 +66,10 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
             android:text="@string/change"
+            android:background="@color/colorAccent"
+            android:layout_centerVertical="true"
+            android:textColor="@color/white"
             android:gravity="center"
-            android:textSize="17sp"
             style="?android:attr/buttonStyleSmall"/>
 
 
