--- a/app/src/main/res/layout/recovery_password.xml
+++ b/app/src/main/res/layout/recovery_password.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linGeneral"
+    android:background="@drawable/side_nav_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -46,11 +47,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp">
 
         <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
             android:scaleType="centerInside"
@@ -61,13 +64,12 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:background="@color/colorAccent"
+            android:textColor="@color/white"
             android:layout_marginRight="20dp"
             android:text="@string/send"
             android:gravity="center"
-            android:textSize="17sp"
             style="?android:attr/buttonStyleSmall"/>
-
-
 
     </RelativeLayout>
 
