--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/clGeneral"
     android:fitsSystemWindows="true"
-    android:background="@drawable/ic_splash"
+    android:background="@drawable/side_nav_bar"
     tools:context=".ui.LoginActivity">
 
     <RelativeLayout
@@ -39,7 +39,6 @@
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
                     android:inputType="textEmailAddress"
-                    android:text="ricardobravo@outlook.com"
                     android:singleLine="true"
                     android:hint="@string/email"/>
 
@@ -58,7 +57,6 @@
                     android:inputType="textPassword"
                     android:singleLine="true"
                     android:imeOptions="actionGo"
-                    android:text="123456789"
                     android:hint="@string/password"/>
 
             </android.support.design.widget.TextInputLayout>
@@ -66,6 +64,8 @@
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
+                android:background="@color/colorAccent"
+                android:textColor="@color/white"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="@string/login"/>
