--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -13,6 +13,11 @@
             android:title="@string/menu_add" />
 
         <item
+            android:id="@+id/opUpload"
+            android:icon="@drawable/ic_cloud_upload"
+            android:title="@string/menu_upload" />
+
+        <item
             android:id="@+id/opChangePassword"
             android:icon="@drawable/ic_verified"
             android:title="@string/menu_change_password" />
